--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,17 @@
 <resources>
 
     <string name="app_name">Taxi Hailing</string>
-    <string name="action_settings">Settings</string>
+    <string name="title_login">Login</string>
+    <string name="login">Login</string>
+    <string name="hint_email_address">Email</string>
+    <string name="hint_password">Password</string>
 
-    <!-- Strings used for fragments for navigation -->
-
-    <string name="splash_fragment_label">Splash Fragment</string>
-    <string name="login_fragment_label">Login Fragment</string>
-
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_splash_fragment">Hello splash fragment</string>
-    <string name="hello_login_fragment">Hello login fragment. Arg: %1$s</string>
 
     <string name="internet_not_available">Please check your network connection.</string>
+
+    <string name="empty_email_validation">Please enter email address</string>
+    <string name="empty_password_validation">Please enter password</string>
+    <string name="valid_email_message">Please enter valid email address</string>
+
 
 </resources>
