--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,13 +6,16 @@
 
     <string name="hint_name">Name</string>
     <string name="hint_email_address">Email</string>
+    <string name="hint_phone_number">Phone number</string>
+    <string name="hint_gender">Gender</string>
     <string name="hint_password">Password</string>
-
 
     <string name="internet_not_available">Please check your network connection.</string>
 
     <string name="empty_name_validation">Please enter name</string>
     <string name="empty_email_validation">Please enter email address</string>
+    <string name="empty_phone_number_validation">Please enter phone number</string>
+    <string name="empty_gender_validation">Please select gender</string>
     <string name="empty_password_validation">Please enter password</string>
     <string name="valid_email_message">Please enter valid email address</string>
     <string name="sign_up">Sign Up</string>
